src/objects/ManyWho_Flow_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Allows to configure flows to some objects</description>
    <fields>
        <fullName>Client_Side_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Side Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collaboration_Uri__c</fullName>
        <label>Collaboration URI</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collapsible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collapsible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Id__c</fullName>
        <label>Flow ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Version_Id__c</fullName>
        <label>Flow Version ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Wizard_Navigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wizard Navigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <label>Tenant ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ManyWho Flow Config</label>
</CustomObject>